--- a/LPProject2/LPProject2/Views/Shared/_Layout.cshtml
+++ b/LPProject2/LPProject2/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Games">Games</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Signup">Signup</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li> <input type="text" placeholder="Search.." class="bottom-right"></li>
                 </ul>
