--- a/LPProject2/LPProject2/Views/Home/Index.cshtml
+++ b/LPProject2/LPProject2/Views/Home/Index.cshtml
@@ -3,11 +3,12 @@
 <html>
 <body style="background-image:url(https://www.designyourway.net/diverse/darkpat/COLOURlovers.com-Grey_Background.jpg);">
 
-    div class="topnav">
+    <div class="topnav">
     <a class="GamesforHire" href="#home">Home</a>
     <a href="#games">Games</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
+    <a href="#Signup">Signup</a>
     <input type="text" placeholder="Search..">
     </div>
 
