--- a/LPProject2/LPProject2/Views/Home/Index.cshtml
+++ b/LPProject2/LPProject2/Views/Home/Index.cshtml
@@ -4,37 +4,35 @@
 <body style="background-image:url(https://www.designyourway.net/diverse/darkpat/COLOURlovers.com-Grey_Background.jpg);">
 
     <div class="topnav">
-    <a class="GamesforHire" href="#home">Home</a>
-    <a href="#games">Games</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-    <a href="#Signup">Signup</a>
-    <input type="text" placeholder="Search..">
+        <a class="GamesforHire" href="#home">Home</a>
+        <a href="#games">Games</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href="#Signup">Signup</a>
+        <input type="text" placeholder="Search..">
     </div>
 
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
+
+
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="text-center"><font color="white" size="24"> Hire now for 20% off!!</font></div>
-                <img src="~/images/God of war.jpg" alt="God of War" class="center-block" style=" width:1000px; height: 563px">
 
-            </div> 
+                <img src="~/images/God of war.jpg" alt="God of War" class="center-block" style=" width:1000px; height: 563px">
+                <div class="text-center"><font color="white" size="22"> Hire now for 20% off!!</font></div>
+            </div>
 
             <div class="item">
                 <img src="~/images/DarkSouls.jpg" alt="Darksouls 3" class="center-block" style=" width:1000px; height: 563px">
+                <div class="text-center"><font color="white" size="22"> Dark souls 3 OUT NOW!!!</font></div>
             </div>
 
             <div class="item">
                 <img src="~/images/Fifa.jpg" alt="Fifa 20" class="center-block" style=" width:1000px; height: 563px">
+                <div class="text-center"><font color="white" size="22"> Pre-order Fifa 20 NOW!!</font></div>
             </div>
         </div>
 
@@ -48,6 +46,37 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="row">
+      <div class="text-left"><font color="white" size="10">Recommended Games</font></div>
+        <img src="~/images/dying-light-2_medium.webp" alt="Mountains" height="200" width="125">
+        &nbsp;
+        &nbsp;
+        &nbsp;
+       <img src="~/images/cyberpunk-2077_medium.webp" alt="Mountains" height="200" width="125">
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        <img src="~/images/dungeons-3-complete-edition_medium.webp" alt="Mountains" height="200" width="125">
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        <img src="~/images/dying-light-2_medium.webp" alt="Mountains" height="200" width="125">
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        <img src="~/images/dungeons-3-complete-edition_medium.webp" alt="Mountains" height="200" width="125">
+        &nbsp;
+        &nbsp;
+        &nbsp;
+
+        <img src="~/images/dying-light-2_medium.webp" alt="Mountains" height="200" width="125">
+        &nbsp;
+        &nbsp;
+        &nbsp;
+    </div>
 </body>
 </html>
-   
