--- a/LPProject2/LPProject2/Views/User/Signup.cshtml
+++ b/LPProject2/LPProject2/Views/User/Signup.cshtml
@@ -23,9 +23,9 @@
 
                     <form asp-action="AddUser" method="POST">
                         <div class="form-group row">
-                            <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.UserName)</label>
+                            <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Name)</label>
                             <div class="col-sm-10">
-                                <input asp-for="UserName" type="text" name="Name" class="form-control" placeholder="Name" required>
+                                <input asp-for="Name" type="text" name="Name" class="form-control" placeholder="Name" required>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -35,23 +35,24 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.UserPhone)</label>
+                            <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Phone)</label>
                             <div class="col-sm-10">
-                                <input asp-for="UserPhone" type="text" name="phone" class="form-control" placeholder="phone" required>
+                                <input asp-for="Phone" type="text" name="phone" class="form-control" placeholder="phone" required>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.UserEmail)</label>
+                            <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Email)</label>
                             <div class="col-sm-10">
-                                <input asp-for="UserEmail" type="text" name="email" class="form-control" placeholder="Email">
+                                <input asp-for="Email" type="text" name="email" class="form-control" placeholder="Email">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.UserNationalty)</label>
+                            <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Nationalty)</label>
                             <div class="col-sm-10">
-                                <input asp-for="UserNationalty" type="text" name="nationality" class="form-control" placeholder="Nationalty">
+                                <input asp-for="Nationalty" type="text" name="nationalty" class="form-control" placeholder="Nationalty">
                             </div>
-                         </div>
+                        </div>
+                         
 
 
                         <div class="form-group row float-right">
