--- a/LPProject2/LPProject2/wwwroot/css/site.css
+++ b/LPProject2/LPProject2/wwwroot/css/site.css
@@ -57,16 +57,26 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    border: 1px solid #ddd;
+    border: 1px solid #e9e9e9;
 }
-
+table {
+    background-color: darkslategrey;
+}
 th, td {
     text-align: left;
     padding: 16px;
 }
 
 tr:nth-child(even) {
-    background-color: #f2f2f2
+    background-color: white;
+}
+
+table tr:nth-child(odd) {
+    background-color: #000000;
+}
+table th {
+    color: white;
+    background-color: black;
 }
 body, html {
     height: 100%;
@@ -76,3 +86,18 @@ body, html {
     background-image: url("paper.gif");
     background-repeat: repeat-y;
 }
+
+ 
+
+
+.column {
+    display: inline-block;
+}
+
+p {
+    text-align: center;
+}
+
+
+/* Clear floats after image containers */
+ 
