--- a/LPProject2/LPProject2/Views/Home/Signup.cshtml
+++ b/LPProject2/LPProject2/Views/Home/Signup.cshtml
@@ -5,7 +5,8 @@
 
  
 <h2>Signup</h2>
-<form asp-controller="User" asp-action="Signup" method="post">
-    <a href="@Url.Action("Signup", "User")"> Signup</a>
-    <button type="button" class="btn btn-primary btn-lg btn-block">I am an costumer</button>
-</form>
+
+    
+    <button type="button" class="btn btn-primary btn-lg btn-block" asp-controller="User" asp-action="SignupPage">I am an costumer</button>
+    
+    
