--- a/LPProject2/LPProject2/Views/Shared/_Layout.cshtml
+++ b/LPProject2/LPProject2/Views/Shared/_Layout.cshtml
@@ -5,21 +5,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - GamesforHire</title>
- 
     
 
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
+
+
+        <environment include="Development">
+            <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+            <link rel="stylesheet" href="~/css/site.css" />
+        </environment>
+        <environment exclude="Development">
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+                  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+                  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+            <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        </environment>
 </head>
-<body>
+<body style="background-image:url(https://www.designyourway.net/diverse/darkpat/COLOURlovers.com-Grey_Background.jpg);">
     <div class="bg"></div>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -30,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">GamesforHire</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">GamesForHire</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -40,12 +41,11 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Signup">Signup</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li> <input type="text" placeholder="Search.." class="bottom-right"></li>
                 </ul>
-
             </div>
         </div>
     </nav>
+                      
 
     <partial name="_CookieConsentPartial" />
 
