--- a/LPProject2/LPProject2/Views/Games/GameForm.cshtml
+++ b/LPProject2/LPProject2/Views/Games/GameForm.cshtml
@@ -23,9 +23,9 @@
 
                     <form asp-action="AddGame" method="POST">
                         <div class="form-group row">
-                            <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.GameName)</label>
+                            <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Name)</label>
                             <div class="col-sm-10">
-                                <input asp-for="GameName" type="text" name="Name" class="form-control" placeholder="Name" required>
+                                <input asp-for="Name" type="text" name="Name" class="form-control" placeholder="Name" required>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -43,13 +43,13 @@
                         <div class="form-group row">
                             <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Price)</label>
                             <div class="col-sm-10">
-                                <input asp-for="Price" type="number" name="Price" class="form-control" placeholder="Price" required>
+                                <input asp-for="Price" type="text" name="Price" class="form-control" placeholder="Price" required>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Hireable)</label>
                             <div class="col-sm-10">
-                                <input asp-for="Hireable" type="checkbox" name="Hireable" class="form-control" placeholder="Hireable">
+                                <input asp-for="Hireable" type="text" name="Hireable" class="form-control" placeholder="Hireable">
                             </div>
                         </div>
 
