--- a/LPProject2/LPProject2/Views/Shared/_Layout.cshtml
+++ b/LPProject2/LPProject2/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Games">Games</a></li>
+                    <li><a asp-area="" asp-controller="Games" asp-action="Games">Games</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Login">Login</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Signup">Signup</a></li>
